tests/compile-fail/unaligned_pointers/unaligned_ptr2.stderr
error: Undefined Behavior: accessing memory with alignment 1, but alignment 4 is required
  --> $DIR/unaligned_ptr2.rs:11:23
   |
11 |     let _x = unsafe { *x }; //~ERROR memory with alignment 1, but alignment 4 is required
   |                       ^^ accessing memory with alignment 1, but alignment 4 is required
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/unaligned_ptr2.rs:11:23

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

